--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - DATABASE_URL=jdbc:mysql://db:3306/app?createDatabaseIfNotExist=true
+      - DATABASE_URL=jdbc:mysql://bd-ecologic-dev.mysql.database.azure.com:3306/app?createDatabaseIfNotExist=true
       - DB_NAME=app
       - DATABASE_USER=root
       - DATABASE_PWD=root_pass
